@@ -12,6 +12,12 @@ REVISION HISTORY
 
 ------------------
 2014-10-22
+Add cdm_NonUniformDomain_inline.h
+cdm_NonUniformDomain_inline.hを作成して、クラスcdm_NonUniformDomain内の
+template関数をinline関数にした。
+
+------------------
+2014-10-22
 Add coordinate file information in proc.dfi in the case of non-uniform domain
 不等間隔格子の場合、ファイルproc.dfiのDomainの所に座標ファイルの
 情報を追記するようにした。
